Fix QA checks